# plant-dashboard

./: README.md  pyproject.toml
src/plant_dashboard/: __init__.py  app.py  celery_app.py  celeryconfig.py  fsdb_api.py  log.py  utils.py  visu.py
src/plant_dashboard/assets/: custom-script.js  custom.css  dashAgGridComponentFunctions.js  geom_pipe_real.toml  typography.css
src/plant_dashboard/pages/: 3d_viewer.py  batch_recontruct.py  carousel.py  home.py  job_queue.py  luigi.py  plantdb_api.py  reconstruct.py
